# monorepo

./: .gitignore  WORKSPACE
go/hello/: BUILD.bazel
nodejs/hello/: BUILD  package.json  tsconfig.json  tslint.json
rust/hello/: BUILD
